# Ruthen-Labs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PROJECT_DOCUMENTATION.md  README.md  benign.py  check_out.txt  clippy_out.txt  destructive_test.py  safe_test.py  suspicious_test.py
UNIT-01/: install.sh  mock_cli.sh  murga.rust
UNIT-01/indexer/: Cargo.toml
UNIT-01/orchestrator/: Makefile  README.md  SECURITY.md  auto_context.go  commands.go  config.go  daemon.go  executor.go  go.mod  go.sum  hardware.go  history.go  llm_client.go  main.go  review.go  stream_parser.go  theme.go  types.go  workspace.go
UNIT-01/sandbox/: Cargo.toml
UNIT-01/ui-node/: README.md  package-lock.json  package.json  tsconfig.json
Yomi/: Cargo.toml  PROGRESS.md  index.json
Yomi/scripts/: prepare_benchmarks.sh
Yomi/src/: daemon.rs  main.rs  watcher.rs
Yomi/src/index/: mod.rs  ripgrep_bridge.rs  storage.rs
Yomi/src/walker/: mod.rs
Yomi/test_data/: .yomi.toml  index.json
Yomi/tests/: gen_index.rs  json_rpc_negative_tests.rs  lifecycle_tests.rs  security_tests.rs
boru/: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  boru_commands.txt  boru_features.txt  check.json  context.md  install.sh
boru/docs/: AGENTS.md  ARCHITECTURE.md  BORU_DOCUMENTATION.md  CLI_USAGE.md  FEATURES.md  README.md  (+5 more)
src/: main.rs
suji/: INSPIRATION_LOG.md  Makefile  README.md  clean.sh  commands.go  config.go  context_injector.go  daemon.go  executor.go  file_parser.go  go.mod  go.sum  history.go  llm_client.go  main.go  mcp_client.go  session.go  stream_parser.go  types.go
(+108 files in other folders)
